Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -26,7 +26,27 @@
 <a id="oppgave-1--hello-world" class="anchor" href="#oppgave-1--hello-world" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 1 – Hello World</h2>
 
 <p>Den første oppgaven er temmelig enkel:
-Lag en ’Hello World’ applikasjon.</p>
+Lag en "Hello World"-applikasjon.</p>
+
+<h2>
+<a id="oppgave-2--personer" class="anchor" href="#oppgave-2--personer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 2 – Personer</h2>
+
+<p>Vår applikasjon vil omhandle personer. Disse personene har egenskaper som navn, alder, hårfarge, høyde og kjønn. Disse egenskapene skal registreres. En persons alder kan ikke være mindre enn 0. 
+Lag en klasse med properties som reflekterer dette. Du kan gjerne overskrive ToString-metoden. Den vil bli brukt i en senere oppgave.</p>
+
+<h2>
+<a id="oppgave-3--log" class="anchor" href="#oppgave-3--log" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 3 – Log</h2>
+
+<p>Kunden vår ønsker å ha mulighet til å logge hendelser.
+Lag en metode på person-klassen som logger utsagn til konsollet (Console.WriteLine()). Metoden skal logge ett eller flere utsagn om gangen. Hvert utsagn skal prefikses med personens navn.  (Bonuspoeng til de som klarer å legge til et default utsagn: ”Blah blah blah..” )
+Eksempellogg:</p>
+
+<pre><code>Starter loggen…
+
+Kanye: “I feel like I'm too busy writing history to read it.”
+
+Kanye: “I don't even listen to rap. My apartment is too nice to listen to rap in.”
+</code></pre>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/bekkopen/dotnetkurs">Bootcamp 2015</a> is maintained by <a href="https://github.com/bekkopen">bekkopen</a>.</span>
