Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -130,6 +130,34 @@ Opprett en property på personobjektet som kan lagre en persons oppførsel.</p>
 </tbody>
 </table>
 
+<p>Kunden ønsker å få skrevet ut en liste over alle personene som er registrert i systemet.
+Iterer igjennom personene i registeret og kall ToString-metoden på hvert personobjekt.</p>
+
+<h2>
+<a id="oppgave-6--filtrering" class="anchor" href="#oppgave-6--filtrering" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 6 – Filtrering</h2>
+
+<p>Nå som dere har bygget litt kompetanse ønsker kunden å få se noen reelle resultater.
+Personer som har svart hår eller er over 100 år gamle er klart mistenkelige. Kunden vil gjerne ha en utskrift over disse personene så snart som mulig.
+Bruk LINQ til å hente ut en liste over disse personene.</p>
+
+<h2>
+<a id="oppgave-7--group-by" class="anchor" href="#oppgave-7--group-by" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 7 – Group by</h2>
+
+<p>Kunden har nok en god dag og er strålende fornøyd. Nå som han har fått gjennomslag for såpass mye ny funksjonalitet så ønsker han å fortsette å utvikle systemet. 
+Kunden ønsker seg en oversikt over personene som er registrert i systemet fordelt etter tilbøyelighet.
+Ta utgangspunkt i lista fra forrige oppgave og grupper på tilbøyelighet. Skriv ut grupperingene.
+Eksempel:</p>
+
+<pre><code>Eeevil:
+    Hans
+    Gretchen
+Good:
+    Petter Sprett
+    Kristoffer Robin
+Dontknow:
+    Supermann
+</code></pre>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/bekkopen/dotnetkurs">.NET introduksjonskurs</a> is maintained by <a href="https://github.com/bekkopen">bekkopen</a>.</span>
 
