Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -158,6 +158,36 @@ Dontknow:
     Supermann
 </code></pre>
 
+<h2>
+<a id="oppgave-8--extension-methods" class="anchor" href="#oppgave-8--extension-methods" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 8 – Extension methods</h2>
+
+<p>Det viser seg at systemet inneholder en del feilregistrerte telefonnummere. I ekstreme tilfeller går systemet ned med en uhåndtert NullReferenceException.
+Lag en extension-metode for string-klassen som kan validere telefonnummere. Gi metoden navnet IsValidPhoneNumber. Det holder å sjekke at nummeret er satt, og at det er minst 8 tegn langt.</p>
+
+<h2>
+<a id="oppgave-9--lambda-uttrykk" class="anchor" href="#oppgave-9--lambda-uttrykk" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 9 – Lambda-uttrykk</h2>
+
+<p>Array-klassen har en generisk, statisk metode som heter Find. Metoden tar inn en array og ett predikat. 
+Lag et lambda-uttrykk som returnerer true hvis personen som gis inn er over 80 år.
+Benytt Find-metoden sammen med lambdauttrykket for å finne en person i lista som er over 80.
+<em>Hint: Et predikat er en delegat som tar inn ett objekt og returnerer en boolsk verdi.</em></p>
+
+<h2>
+<a id="oppgave-10--spørreoperatorer" class="anchor" href="#oppgave-10--sp%C3%B8rreoperatorer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 10 – Spørreoperatorer</h2>
+
+<h3>
+<a id="oppgave-101-where" class="anchor" href="#oppgave-101-where" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 10.1 Where</h3>
+
+<p>En lokal kiosk har blitt ranet, og ransmannen kom seg unna i en stor rød folkevogn. Opptakene fra kioskens overvåkningskamera viser at raneren var over 1.80 meter høy og vitner hevder han hadde brunt hår. Benytt Where-operatoren til å hente ut en liste over mulige forbrytere.</p>
+
+<h3>
+<a id="oppgave-102" class="anchor" href="#oppgave-102" aria-hidden="true"><span class="octicon octicon-link"></span></a>Oppgave 10.2</h3>
+
+<p>Benytt Select-operatoren til å hente ut en array med alle navnene til alle i registeret.</p>
+
+<h1>
+<a id="del-2--aspnet-mvc" class="anchor" href="#del-2--aspnet-mvc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Del 2 – ASP.NET MVC</h1>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/bekkopen/dotnetkurs">.NET introduksjonskurs</a> is maintained by <a href="https://github.com/bekkopen">bekkopen</a>.</span>
 
